--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,9 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
+
+.box {
+  height: 50px;
+  width: 50px;
+  border: 1px solid cornflowerblue;
+}
